fixed overlapping text in audition

--- a/components/Auditions/audition.module.scss
+++ b/components/Auditions/audition.module.scss
@@ -169,13 +169,13 @@
 }
 
 .img1 {
-  width: 21rem;
+  width: 12rem;
   border-radius: 8px;
   filter: grayscale(1);
   // margin: 16px 32px;
 }
 .img2 {
-  width: 21rem;
+  width: 12rem;
   border-radius: 8px;
   filter: grayscale(1);
 }
